Fri Mar  9 19:20:24 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/bcp.c src/dblib/dbpivot.c:
	- removed old function in bcp.c

commented out unused function in dbpivot.c
Tue Mar  6 21:49:23 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild misc/prepare_win32.sh:
	- improve various scripts

Tue Mar  6 20:45:46 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/freeclose.c: removed already done TODO

Tue Mar  6 20:39:59 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/replacements/Makefile.am:
	* src/tds/Makefile.am:
	- move win_mutex to replacements

Tue Mar  6 20:33:07 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/bsqldb.c src/dblib/dbpivot.c src/tds/query.c:
	- remove some warnings and compatibility issues

Sun Mar  4 12:34:17 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/replacements/socketpair.c:
	- fix socket pair emulation for Windows

Sun Mar  4 12:32:49 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/connect2.c:
	- better error report on SQLConnect failure

Sat Mar  3 23:13:52 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/funccall.c:
	- does not return parameters as rows in odbc

Sat Mar  3 22:36:49 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc_export.pl: simplify export script

Sat Mar  3 10:19:58 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/common.c:
	- clean connection on connection failure

Tue Feb 28 23:50:28 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/.gitignore: update ignore file

Sun Feb 26 23:22:25 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: free context if ssl handshake fails

Sun Feb 26 23:18:45 CET 2012    Frediano Ziglio <freddy77_A_gmail_D_com>