@@ -3,7 +3,12 @@
 use strict;
 open(IN, $ARGV[0]) or die;
 
-my @types = split(',', 'SQLHANDLE,SQLHENV,SQLHDBC,SQLHSTMT,SQLHDESC,SQLHWND,SQLSMALLINT,SQLUSMALLINT,SQLINTEGER,SQLSMALLINT *,SQLLEN *,SQLULEN *,SQLINTEGER *,SQLPOINTER');
+my @types = split(',',
+'SQLHANDLE,SQLHENV,SQLHDBC,SQLHSTMT,SQLHDESC,SQLHWND,SQLSMALLINT,SQLUSMALLINT,SQLINTEGER,SQLSMALLINT *,SQLLEN *,SQLULEN *,SQLINTEGER *,SQLPOINTER');
+my @fmt=split(/,\s*/,
+'p,        p,      p,      p,       p,       p,      d,          u,           d,         p,            p,       p,        p,           p');
+my %fmt;
+@fmt{@types} = @fmt;
 
 while(<IN>) {
 	chomp;
@@ -22,6 +27,8 @@ while(<IN>) {
 		my $params_all = '';
 		my $pass_aw = '';
 		my $sep = '';
+		my $log = "tdsdump_log(TDS_DBG_FUNC, \"$func(";
+		my $log_p = '';
 		$wide = 1 if $args =~ / WIDE ?$/;
 		$args =~ s/ WIDE ?$//;
 #		print "$1 - $2\n";
@@ -31,25 +38,36 @@ while(<IN>) {
 			if ($type eq 'P') {
 				$a =~ s/ FAR \*$/ */;
 				die $a if !grep { $_ eq $a } @types;
+				die if !exists($fmt{$a});
 				$params_all .= "$sep$a $b";
 				$pass_aw    .= "$sep$b";
+				$log   .= "$sep%$fmt{$a}";
+				$log_p .= "$sep$b";
 			} elsif ($type eq 'PCHARIN' || $type eq 'PCHAROUT') {
 				die $b if $b ne 'SQLSMALLINT' && $b ne 'SQLINTEGER';
 				if ($type eq 'PCHARIN') {
 					$params_all .= "${sep}ODBC_CHAR * sz$a, $b cb$a";
 					$pass_aw    .= "$sep(ODBC_CHAR*) sz$a, cb$a";
+					$log   .= "$sep%ls, %d";
+					$log_p .= "${sep}STRING(sz$a,cb$a), cb$a";
 				} else {
 					$params_all .= "${sep}ODBC_CHAR * sz$a, $b cb${a}Max, $b FAR* pcb$a";
 					$pass_aw    .= "${sep}(ODBC_CHAR*) sz$a, cb${a}Max, pcb$a";
+					$log   .= "$sep%p, %d, %p";
+					$log_p .= "${sep}sz$a, cb${a}Max, pcb$a";
 				}
 			} elsif ($type eq 'PCHAR') {
 				$params_all .= "${sep}ODBC_CHAR * $a";
 				$pass_aw    .= "$sep(ODBC_CHAR*) $a";
+				$log   .= "$sep%p";
+				$log_p .= "$sep$a";
 			} else {
 				die $type;
 			}
 			$sep = ', ';
 		}
+		$log .= ")\\n\", ".$log_p.");";
+
 		my $params_a = $params_all;
 		$params_a =~ s/ODBC_CHAR \*/SQLCHAR */g;
 		my $params_w = $params_all;
@@ -57,16 +75,26 @@ while(<IN>) {
 		my $pass_all = $pass_aw;
 		$pass_all =~ s/\(ODBC_CHAR\*\) ?//g;
 
+		my $log_w = $log;
+		$log_w =~ s/STRING\((.*?),(.*?)\)/sqlwstr($1)/g;
+		$log_w =~ s/\"$func/"${func}W/;
+
+		$log =~ s/%ls/%s/g;
+		$log =~ s/STRING\((.*?),(.*?)\)/(const char*) $1/g;
+
 		print "#ifdef ENABLE_ODBC_WIDE
 static SQLRETURN _$func($params_all, int wide);
 SQLRETURN ODBC_API $func($params_a) {
+	$log
 	return _$func($pass_aw, 0);
 }
 SQLRETURN ODBC_API ${func}W($params_w) {
+	$log_w
 	return _$func($pass_aw, 1);
 }
 #else
 SQLRETURN ODBC_API $func($params_a) {
+	$log
 	return _$func($pass_all);
 }
 #endif
