@@ -1,3 +1,9 @@
+Fri Mar  9 21:51:14 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* include/tdsodbc.h src/odbc/error.c src/odbc/odbc.c:
+	* src/odbc/odbc_export.pl src/odbc/sqlwchar.c:
+	- deal with string printing properly for wide odbc (initial patch
+	  fro Christos Zoulas)
+
 Fri Mar  9 19:20:24 GMT 2012    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/dblib/bcp.c src/dblib/dbpivot.c:
 	- removed old function in bcp.c
@@ -1073,4 +1079,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3459 2012-03-09 19:20:30 freddy77 Exp $
+$Id: ChangeLog,v 1.3460 2012-03-09 21:51:20 freddy77 Exp $
